Bug 474815 - Docker titlebars aren't shown
Summary: Docker titlebars aren't shown
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-09-23 19:43 UTC by Freya Lupen
Modified: 2023-09-25 14:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Freya Lupen 2023-09-23 19:43:50 UTC
SUMMARY
The dockers' title bars (containing names and lock, float, and close buttons) aren't being shown.
This is a regression of 1fd54e5f.

STEPS TO REPRODUCE
1. Open Krita, open a document to show dockers.

OBSERVED RESULT
Empty spaces where the docker titlebars would be.

EXPECTED RESULT
Visible docker titlebars.

SOFTWARE/OS VERSIONS
Krita 5.3.0-prealpha git d8d6ab4c

ADDITIONAL INFORMATION
Loading a workspace shows the names and lock icons. Toggling lock shows the float button.
Comment 1 Dmitry Kazakov 2023-09-25 14:25:05 UTC
Git commit 52b08ae5a361b3a58e4ceb084683172bc1f06c89 by Dmitry Kazakov.
Committed on 25/09/2023 at 16:24.
Pushed by dkazakov into branch 'master'.

Fix docker titlebars to be visible again

They are controlled by a different option that has no online
GUI change (though it has a stub in KisMainWindow::showDockerTitleBars)

M  +2    -2    libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/-/commit/52b08ae5a361b3a58e4ceb084683172bc1f06c89