Fix docker titlebars to be visible again

They are controlled by a different option that has no online
GUI change (though it has a stub in KisMainWindow::showDockerTitleBars)

BUG:474815